--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-target/
+/target/**
+/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -10,6 +11,5 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 .idea/
-target/
 *.iml
 .DS_Store
